refactor(comment): optimize comment system with cursor pagination and 2-level architecture
- Entity: Transition to a 2-level hierarchy (Root & Reply), replacing @Formula with a physical reply_count column.
- Database: Add composite indexes (idx_post_parent_id, idx_parent_id_id) to optimize queries.
- Pagination: Implement cursor pagination to resolve performance and data drift issues (replacing offset/limit).
- API: Separate endpoints for fetching root comments and replies to support lazy loading.
- DTO: Add CursorPageResponse and UpdateCommentRequestDto; remove recursive structure in CommentResponseDto.